<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.hizmet.bluewhaleventures.fragments.InformationFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/appToolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/toolbarLogo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/bw_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/toolbarLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLineGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </FrameLayout>

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/intro"
            android:text="@string/fragmentUserInformation_toolbarTitle"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/userInfoLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appToolbar">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/userBadge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat_bold"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/fragmentUserInformation_userName"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/profileOptionButton"
                app:layout_constraintStart_toEndOf="@+id/userImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:fontFamily="@font/montserrat"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/fragmentUserInformation_userEmail"
                app:layout_constraintEnd_toStartOf="@+id/profileOptionButton"
                app:layout_constraintStart_toEndOf="@+id/userImage"
                app:layout_constraintTop_toBottomOf="@+id/userName" />

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/bw_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/profileOptionButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="false"
                android:background="?selectableItemBackgroundBorderless"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                android:src="@drawable/ic_options"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/deviderLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLineGrey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </FrameLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
